# immersiveclient

./: .gitignore  LICENSE  Makefile  README  README.md  gen-setenv.sh  setenv.sh
ImmersiveClient/: .gitignore
ImmersiveClient/app/: .gitignore  CMakeLists.txt  build.gradle
ImmersiveClient/app/src/androidTest/java/net/immersive/immersiveclient/: ExampleInstrumentedTest.java
ImmersiveClient/app/src/main/: AndroidManifest.xml
ImmersiveClient/app/src/main/assets/: spiderman_tex_FINAL.ma  spiderman_tex_final.mtl  tekstiassetti.txt
ImmersiveClient/app/src/main/cpp/: aruco_java.cpp  aruco_java.h
ImmersiveClient/app/src/main/java/net/immersive/immersiveclient/: CameraEventListener.java  CameraView.java  CaptureCameraPreview.java  Hello.java  HelloGL.java  HelloGLRenderer.java  Immersive.java  MainActivity.java  OpenGLTriangle.java
ImmersiveClient/app/src/main/res/layout/: activity_main.xml
ImmersiveClient/app/src/main/res/values/: ids.xml  strings.xml
ImmersiveClient/app/src/test/java/net/immersive/immersiveclient/: ExampleUnitTest.java
ImmersiveClient/gradle/wrapper/: gradle-wrapper.properties
immersive/: .gitignore  CMakeLists.txt
immersive/src/: .gitignore  android.cpp  gles2test.c  gles2test.h  immersive.c  immersive.cpp  immersive.h  immersive_config.h.in  native.cpp  osgAndroidNotifier.cpp  osgAndroidNotifier.h
immersive/toolchains/: armeabi.cmake  i686.cmake  x86_64.cmake
misc-code/parseqr/: ParseQR.kt
misc-code/qrcreate/: Makefile  create.c
misc-code/qrscan/: .gitignore  Makefile
opencv-aruco/: aruco.py  calibrate.py
parseqr/: ParseQRKt.h
qrscan/: .gitignore  Makefile  scan.c
